[gd_scene load_steps=6 format=3 uid="uid://cg2pi4qk36skr"]

[ext_resource type="Script" path="res://HUD.gd" id="1_hemeg"]
[ext_resource type="FontFile" uid="uid://jecdjtqdi51x" path="res://fonts/Xolonium-Regular.ttf" id="2_4xd5h"]
[ext_resource type="Script" path="res://HBoxContainer.gd" id="3_2libk"]

[sub_resource type="InputEventAction" id="InputEventAction_xrmis"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_udfxe"]
events = [SubResource("InputEventAction_xrmis")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hemeg")

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -82.0
offset_right = 240.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_4xd5h")
theme_override_font_sizes/font_size = 65
text = "Dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_4xd5h")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_udfxe")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LivesLabel" type="Label" parent="."]
offset_right = 45.0
offset_bottom = 81.0
theme_override_fonts/font = ExtResource("2_4xd5h")
theme_override_font_sizes/font_size = 64

[node name="DifficultyButton" type="OptionButton" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -86.0
offset_right = 310.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_4xd5h")
theme_override_font_sizes/font_size = 64
item_count = 5
selected = 0
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2
popup/item_3/text = "Extreme"
popup/item_3/id = 3
popup/item_4/text = "Ded"
popup/item_4/id = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 47.0
offset_bottom = 47.0
script = ExtResource("3_2libk")

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="NameBox" type="LineEdit" parent="."]
visible = false
offset_left = 732.0
offset_top = 254.0
offset_right = 799.062
offset_bottom = 285.0
theme_override_fonts/font = ExtResource("2_4xd5h")
theme_override_font_sizes/font_size = 64
placeholder_text = "Name"

[node name="HighscoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_4xd5h")
theme_override_font_sizes/font_size = 64
text = "Score: 0"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="text_submitted" from="NameBox" to="." method="_on_name_box_text_submitted"]
